SERVER-27935 Fix serialization of concurrent fsyncLock executions